added myself to author list

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@ David LeBauer <dlebauer@gmail.com>
 David Rio Deiros <driodeiros@gmail.com>
 Dorota Jarecka <djarecka@gmail.com>
 Doug Latornell <djl@douglatornell.ca>
+Emily Davenport <erdavenport@uwalumni.com>
 Emmanouil Farsarakis <farsarakis@gmail.com>
 Ethan White <ethan@weecology.org>
 Francois Michonneau <francois.michonneau@gmail.com>
